--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -1,16 +1,22 @@
+# Fortigate logs to Data Collection Rule
+# 2023-03-19 mikko@koivusec.fi
+
+# Fortigate destination port needs to be changed at command line. Optionally you can try local port redirection (514->5514) or setcap.
+# ECS compatibility is disabled as I think standard CEF fields are clearer in these cases.
 input {
-      udp {
+        udp {
                 port => 5514
                 codec => cef {
-                        ecs_compatibility => v1
+                        ecs_compatibility => disabled
                 }
-                type => fortigate
-       }
+        type => fortigate
+        }
 }
 
+# Filter drops certain records I do not want to be collected.
 filter {
         if [type] == "fortigate" {
-                if [destination][ip] == [source][ip]
+                if [destinationAddress] == [sourceAddress]
                 or [FTNTFGTaction] == "close"
                 or [FTNTFGTaction] == "vpn" {
                         drop { }
@@ -18,6 +24,7 @@ filter {
         }
 }
 
+# Standard DCR output as documented by Microsoft.
 output {
         microsoft-sentinel-logstash-output-plugin {
         client_app_Id => ""
