--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -14,6 +14,8 @@ input {
 }
 
 # Filter drops certain records I do not want to be collected.
+# I prefer to set the data model template in the DCR and do drop filters in Logstash.
+# The filter usually gets changed more often and the change is easier here.
 filter {
         if [type] == "fortigate" {
                 if [destinationAddress] == [sourceAddress]
