--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -1,7 +1,8 @@
 # Fortigate logs to Data Collection Rule
 # 2023-03-19 mikko@koivusec.fi
 
-# Fortigate destination port needs to be changed at command line. Optionally you can try local port redirection (514->5514) or setcap.
+# Fortigate destination port needs to be changed at command line: config log syslogd setting, set status enable, set port 5514
+# Optionally you can try local port redirection (514->5514) or setcap.
 # ECS compatibility is disabled as I think standard CEF fields are clearer in these cases.
 input {
         udp {
