--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -15,8 +15,7 @@ input {
 }
 
 # Filter drops certain records I do not want to be collected.
-# I prefer to set the data model template in the DCR and do drop filters in Logstash.
-# The filter usually gets changed more often and the change is easier here.
+# I prefer to set the data model template in the DCR and do drop filters in Logstash. You could do it in either.
 filter {
         if [type] == "fortigate" {
                 if [destinationAddress] == [sourceAddress]
