--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -1,9 +1,12 @@
 # Fortigate logs to Data Collection Rule
 # 2023-03-19 mikko@koivusec.fi
 
-# Fortigate destination port needs to be changed at command line: config log syslogd setting, set status enable, set port 5514
+# Fortigate destination port needs to be changed at command line: 
+#    config log syslogd setting
+#    set status enable
+#    set port 5514
 # Optionally you can try local port redirection (514->5514) or setcap.
-# ECS compatibility is disabled as I think standard CEF fields are clearer in these cases.
+# ECS compatibility is disabled as I think standard CEF fields are clearer here.
 input {
         udp {
                 port => 5514
@@ -14,8 +17,9 @@ input {
         }
 }
 
-# Filter drops certain records I do not want to be collected.
-# I prefer to set the data model template in the DCR and do drop filters in Logstash. You could do it in either.
+# Example filters to drop unwanted messages.
+# You can drop messages either at Logstash or in the DCR. 
+# I prefer to do drop filters in Logstash and set the columns in the DCR. 
 filter {
         if [type] == "fortigate" {
                 if [destinationAddress] == [sourceAddress]
