--- a/Fortigate/logstash.conf
+++ b/Fortigate/logstash.conf
@@ -17,7 +17,7 @@ input {
         }
 }
 
-# Example filters to drop unwanted messages.
+# Example filters to drop unwanted messages. Review before using and check what you actually want logged.
 # You can drop messages either at Logstash or in the DCR. 
 # I prefer to do drop filters in Logstash and set the columns in the DCR. 
 filter {
